Fix : Header et Footer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header data-bs-theme="dark">
-    <nav class="navbar navbar-expand-lg sticky-top bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand" href="/">BootstrapCommencer</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,13 +17,15 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="#">Blog</a>
                     <a class="nav-link" aria-current="page" href="#">Contact</a>
+                    <a class="nav-link" aria-current="page" href="#">Test</a>
                 </div>
             </div>
         </div>
     </nav>
 </header>
-
-<footer class="bg-body-tertiary" data-bs-theme="dark">
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<footer class="bg-body-tertiary py-5" data-bs-theme="dark">
     <div class="container text-center">
         <div class="row align-items-center">
             <div class="col">
@@ -32,12 +34,13 @@
                 </div>
             </div>
             <div class="col">
-                <p class="text-light">Réaliser par Louka Fauvel et Thomas Desse</p>
+                <p class="text-light">Réaliser par <b>Louka Fauvel</b> et <b>Thomas Desse</b></p>
             </div>
             <div class="col">
                 <div class="list-group">
                     <a class="list-group-item list-group-item-action active" href="#">Blog</a>
                     <a class="list-group-item list-group-item-action" href="#">Contact</a>
+                    <a class="list-group-item list-group-item-action" href="#">Test</a>
                 </div>
             </div>
         </div>
